--- a/src/css/style.css
+++ b/src/css/style.css
@@ -482,7 +482,7 @@ img {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url('/img/fish/food-truck-5.jpg') top center;
+  background: url('../img/food-truck-5.jpg') top center;
   background-size: cover;
   position: relative;
   padding: 0;
@@ -561,9 +561,6 @@ img {
 }
 
 @media (max-height: 500px) {
-  #hero {
-    /* height: auto; when view is landscape on mobile, doesn't cover entire screen */
-  }
   #hero .container {
     padding-top: 130px;
     padding-bottom: 60px;
@@ -630,7 +627,7 @@ section {
 --------------------------------------------------------------*/
 .about {
 /*   background: url("../img/about-bg.jpg") center center; */
-  background: url('/img/fish/food-truck-7.jpg') center center;
+  background: url('../img/food-truck-7.jpg') center center;
   background-size: cover;
   position: relative;
   padding: 80px 0;
