--- a/src/css/style.css
+++ b/src/css/style.css
@@ -482,7 +482,7 @@ img {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url('../img/food-truck-5.jpg') top center;
+  background: url('/img/fish/food-truck-5.jpg') top center;
   background-size: cover;
   position: relative;
   padding: 0;
@@ -627,7 +627,7 @@ section {
 --------------------------------------------------------------*/
 .about {
 /*   background: url("../img/about-bg.jpg") center center; */
-  background: url('../img/food-truck-7.jpg') center center;
+  background: url('/img/fish/food-truck-7.jpg') center center;
   background-size: cover;
   position: relative;
   padding: 80px 0;
@@ -942,7 +942,7 @@ section {
 # Events
 --------------------------------------------------------------*/
 .events {
-  background: url(../img/events-bg.jpg) center center no-repeat;
+  background: url(/img/events-bg.jpg) center center no-repeat;
   background-size: cover;
   position: relative;
 }
